to ReplaceItemCommand